# prometheus

./: .gitignore  .golangci.yml  Cargo.toml  Makefile  Prometheus_Architecture.md  Prometheus_Implementation_Needs.md  Prometheus_PRD.md  Prometheus_Point_De_Depart.md  Prometheus_Stack.md  Prometheus_System_Prompt.md  Prometheus_UI_Univers_Mondes.md  README.md  SECURITY.md  Semaine1_Design_System_Avatar.md  agent.go  animation_system.js  avatar_demo.html  avatar_micro_interactions.css  avatar_performance_optimized.css  avatar_prometheus.css  avatar_prometheus_design.md  avatar_prometheus_react.jsx  avatar_suivi_curseur.js  config.yaml  context.go  context_manager.js  database.go  discovery.go  executor.go  fwca_core.js  fwca_perceive.js  go.mod  go.sum  interface_temple_layout.css  interface_temple_navigation.js  interface_temple_responsive.css  interface_temple_transitions.js  libre_arbitre.js  llm.go  main.go  (+22 more)
.github/: dependabot.yml
android/: AndroidManifest.xml
docs/: README.fr.md  README.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  browser-control.md  capabilities.md  guide-raspberry-pi.md  vision.md
rust_version/: Cargo.toml  MASTER_PLAN.md  config.yaml  prompt.md
rust_version/capabilities/web_browser/: meta.json  script.sh
rust_version/docs/superpowers/plans/: 2026-04-22-auto-launch-browser.md
rust_version/src/: main.rs
rust_version/src/brain/: mod.rs  ollama.rs
rust_version/src/capabilities/: manager.rs  meta.rs  mod.rs
rust_version/src/core/: loop_.rs  mod.rs
rust_version/src/executor/: shell.rs
rust_version/src/web/: cdp.rs  launcher.rs  mod.rs
(+330 files in other folders)
