[package]
name = "prometheus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
tokio-tungstenite = "0.25"
futures-util = "0.3"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1